Layout finishes Two column layout on tablet and greater Icons for closed and open state Fix wrap and spacing on group and date text Empty state for calendar

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,8 +21,15 @@
   &__main {
     @include tablet {
       display: flex;
-      flex-wrap: wrap;
       justify-content: space-between;
+    }
+  }
+
+  &__column {
+    width: 100%;
+
+    @include tablet {
+      width: 49%;
     }
   }
 }
